Skip to content

GitLab

  • Projects
  • Groups
  • Snippets
  • Help
    • Loading...
  • Help
    • Help
    • Support
    • Community forum
    • Submit feedback
    • Contribute to GitLab
  • Sign in / Register
xserver
xserver
  • Project overview
    • Project overview
    • Details
    • Activity
    • Releases
  • Repository
    • Repository
    • Files
    • Commits
    • Branches
    • Tags
    • Contributors
    • Graph
    • Compare
  • Issues 864
    • Issues 864
    • List
    • Boards
    • Labels
    • Service Desk
    • Milestones
  • Merge Requests 93
    • Merge Requests 93
  • CI/CD
    • CI/CD
    • Pipelines
    • Jobs
    • Schedules
  • Operations
    • Operations
    • Incidents
    • Environments
  • Packages & Registries
    • Packages & Registries
    • Container Registry
  • Analytics
    • Analytics
    • CI/CD
    • Repository
    • Value Stream
  • Wiki
    • Wiki
  • Snippets
    • Snippets
  • Members
    • Members
  • Activity
  • Graph
  • Create a new issue
  • Jobs
  • Commits
  • Issue Boards
Collapse sidebar
  • xorg
  • xserverxserver
  • Issues
  • #951

Closed
Open
Created Dec 10, 2019 by Robert Mader@rmaderContributor

Xwayland occasionally shows outdated content

I sometimes see outdated content in XWayland. Haven't found a good reproducer yet, but one example is Thunderbird, where e.g. the sender or the title of a mail is not updated or jumps back and forth between the actual and the previous one randomly, sometimes very fast. I assume this is regression from !316 (merged)

Apparently under certain circumstances not all buffers are updated completely.

To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information
Assignee
Assign to
None
Milestone
None
Assign milestone
Time tracking
None
Due date
None